--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/c99f3bf5cf.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>Best Courses</title>
 </head>
 
 <body>
